--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -2,95 +2,81 @@
 <html lang="pl">
 <head>
   <link rel="icon" href="/favicon.png">
-<meta name="robots" content="noindex, nofollow">
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<style>
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f6f8;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
-
-.form-wrapper {
-  width: 100%;
-  max-width: 600px;
-}
-
-form {
-  position: relative;
-  background-color: #fff;
-  padding: 30px 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
-
-h2 { text-align: center; margin-bottom: 20px; }
-
-label { margin-top: 15px; display: block; font-weight: 600; }
-
-input, textarea, select {
-  width: 100%;
-  padding: 10px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-  box-sizing: border-box;
-  background-color: #fff;
-  color: #000;
-}
-
-select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
-select:not(:disabled) { background-color: #fff; color: #000; }
-
-textarea { min-height: 80px; }
-
-button[type="submit"] {
-  margin-top: 20px;
-  width: 100%;
-  padding: 12px;
-  background: #4CAF50;
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  font-size: 16px;
-  cursor: pointer;
-}
-button[type="submit"]:hover { background: #45a049; }
-
-#close-btn {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  background: transparent;
-  border: none;
-  font-size: 26px;
-  font-weight: bold;
-  cursor: pointer;
-  color: #666;
-  line-height: 1;
-}
-#close-btn:hover { color: #000; }
-
-#result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
-.error { background: #f44336; color: #fff; }
-#loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
-
-.rodo-label {
-  display: flex;
-  align-items: center;
-  margin-top: 15px;
-  font-weight: normal;
-  font-size: 14px;
-}
-.rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
-</style>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+    }
+    .form-wrapper { width: 100%; max-width: 600px; }
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    h2 { text-align: center; margin-bottom: 20px; }
+    label { margin-top: 15px; display: block; font-weight: 600; }
+    input, textarea, select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      box-sizing: border-box;
+      background-color: #fff;
+      color: #000;
+    }
+    select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+    select:not(:disabled) { background-color: #fff; color: #000; }
+    textarea { min-height: 80px; }
+    button[type="submit"] {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button[type="submit"]:hover { background: #45a049; }
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+    #close-btn:hover { color: #000; }
+    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+    .error { background: #f44336; color: #fff; }
+    #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+    .rodo-label {
+      display: flex;
+      align-items: center;
+      margin-top: 15px;
+      font-weight: normal;
+      font-size: 14px;
+    }
+    .rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
+  </style>
 </head>
 
 <body>
@@ -98,12 +84,10 @@ button[type="submit"]:hover { background: #45a049; }
 <form id="register-form">
 
   <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
-
   <h2 id="form-title">Rejestracja</h2>
 
   <label>Imię</label>
   <input id="imie" required oninput="this.value=this.value.toUpperCase()">
-
   <label>Nazwisko</label>
   <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
 
@@ -119,22 +103,16 @@ button[type="submit"]:hover { background: #45a049; }
 
   <label>Nr upr. EKSPLOATACJA</label>
   <textarea id="nrE"></textarea>
-
   <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
   <textarea id="nrEPomiary"></textarea>
-
   <label>Nr upr. DOZÓR</label>
   <textarea id="nrD"></textarea>
-
   <label>Email</label>
   <input id="email" readonly>
-
   <label>Telefon</label>
   <input id="telefon">
-
   <label>Zajmuje się</label>
   <textarea id="zajmujeSie"></textarea>
-
   <label>Załącz skan uprawnień</label>
   <input type="file" id="plik" multiple>
 
@@ -159,19 +137,11 @@ const supabase = createClient(
 )
 
 let currentUser = null
-
-const fields = [
-  'imie','nazwisko','miasto','wojewodztwo',
-  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
-]
+const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
 async function loadWojewodztwa(selectedWoj = null) {
-  const { data, error } = await supabase
-    .from('wojewodztwa')
-    .select('id, nazwa')
-    .order('nazwa')
-  if (error) { console.error('Błąd ładowania województw:', error); return }
-
+  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
+  if (error) return console.error('Błąd ładowania województw:', error)
   const wojSelect = document.getElementById('wojewodztwo')
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
   data.forEach(w => {
@@ -180,39 +150,21 @@ async function loadWojewodztwa(selectedWoj = null) {
     option.textContent = w.nazwa
     wojSelect.appendChild(option)
   })
-  if (selectedWoj) {
-    wojSelect.value = selectedWoj
-    wojSelect.dispatchEvent(new Event('change'))
-  }
+  if (selectedWoj) { wojSelect.value = selectedWoj; wojSelect.dispatchEvent(new Event('change')) }
 }
 
 document.getElementById('wojewodztwo').addEventListener('change', async function() {
   const wojId = this.value
   const miastoSelect = document.getElementById('miasto')
-  if (!wojId) {
-    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-    miastoSelect.disabled = true
-    return
-  }
-  const { data, error } = await supabase
-    .from('miasta')
-    .select('id, nazwa')
-    .eq('wojewodztwo_id', wojId)
-    .order('nazwa')
-  if (error) { console.error('Błąd ładowania miast:', error); return }
+  if (!wojId) { miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'; miastoSelect.disabled = true; return }
+  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
+  if (error) return console.error('Błąd ładowania miast:', error)
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-  data.forEach(m => {
-    const option = document.createElement('option')
-    option.value = m.id
-    option.textContent = m.nazwa
-    miastoSelect.appendChild(option)
-  })
+  data.forEach(m => { const option = document.createElement('option'); option.value = m.id; option.textContent = m.nazwa; miastoSelect.appendChild(option) })
   miastoSelect.disabled = false
 })
 
-document.getElementById('close-btn').addEventListener('click', () => {
-  window.location.href = 'https://orep.pl/';
-})
+document.getElementById('close-btn').addEventListener('click', () => window.location.href = 'https://orep.pl/')
 
 // --- Pobranie bieżącego użytkownika i wstępne wypełnienie formularza ---
 document.addEventListener('DOMContentLoaded', async () => {
@@ -221,12 +173,7 @@ document.addEventListener('DOMContentLoaded', async () => {
   currentUser = user
   email.value = user.email
 
-  const { data } = await supabase
-    .from('tabela_elektrykow')
-    .select('*')
-    .eq('email', user.email)
-    .single()
-
+  const { data } = await supabase.from('tabela_elektrykow').select('*').eq('email', user.email).single()
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
@@ -245,98 +192,58 @@ async function wyslijMagicEmail(email) {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ email })
-    });
-    const data = await res.json();
-    if (!data.ok) {
-      console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd');
-    }
-  } catch(err) {
-    console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err);
-  }
+    })
+    const data = await res.json()
+    if (!data.ok) console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd')
+  } catch(err) { console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err) }
 }
 
 // --- OBSŁUGA SUBMIT FORMULARZA ---
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-  loading.style.display = 'block'
-  result.textContent = ''
-  result.className = ''
+  loading.style.display = 'block'; result.textContent = ''; result.className = ''
 
-  // --- WALIDACJA nrE / nrEPomiary / nrD ---
-  if (nrE.value && nrEPomiary.value) {
-    loading.style.display = 'none'
-    result.textContent = 'Wybierz tylko jeden rodzaj eksploatacji'
-    result.className = 'error'
-    return
-  }
-  if (nrD.value && !nrEPomiary.value) {
-    loading.style.display = 'none'
-    result.textContent = 'Do DOZORU wymagane są pomiary'
-    result.className = 'error'
-    return
-  }
+  if (nrE.value && nrEPomiary.value) { loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
+  if (nrD.value && !nrEPomiary.value) { loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
 
   // --- WALIDACJA PLIKU ---
-  const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
-  const maxSize = 5 * 1024 * 1024 // 5MB
-  for (let i = 0; i < plik.files.length; i++) {
+  const allowedTypes = ['application/pdf','image/jpeg','image/png']
+  const maxSize = 5*1024*1024
+  for (let i=0;i<plik.files.length;i++) {
     const file = plik.files[i]
-    if (!allowedTypes.includes(file.type)) {
-      loading.style.display = 'none'
-      result.textContent = 'Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'
-      result.className = 'error'
-      return
-    }
-    if (file.size > maxSize) {
-      loading.style.display = 'none'
-      result.textContent = 'Plik zbyt duży. Maksymalny rozmiar: 5 MB'
-      result.className = 'error'
-      return
-    }
+    if (!allowedTypes.includes(file.type)) { loading.style.display='none'; result.textContent='Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'; result.className='error'; return }
+    if (file.size>maxSize) { loading.style.display='none'; result.textContent='Plik zbyt duży. Maks. 5MB'; result.className='error'; return }
   }
 
-  // --- UPLOAD PLIKÓW ---
-  let plikUrls = []
-  for (let i = 0; i < plik.files.length; i++) {
-    const file = plik.files[i]
-    const path = `${currentUser.id}/${Date.now()}_${file.name}`
-    const { error: uploadError } = await supabase.storage.from('attachments').upload(path, file, { upsert: true })
-    if (uploadError) {
-      loading.style.display = 'none'
-      result.textContent = 'Błąd wysyłania pliku: ' + uploadError.message
-      result.className = 'error'
-      return
-    }
+  // --- UPLOAD PLIKÓW z uwzględnieniem LP ---
+  let plikUrls=[]
+  let lp=null
+  const { data: userData, error: userDataError } = await supabase.from('tabela_elektrykow').select('lp').eq('email', currentUser.email).single()
+  if (userDataError) { console.error('Nie udało się pobrać LP:', userDataError) } else { lp=userData.lp }
+  if (!lp) lp=currentUser.id
+
+  for (let i=0;i<plik.files.length;i++) {
+    const file=plik.files[i]
+    const path=`permissions/${lp}/${Date.now()}_${file.name}`
+    const { error: uploadError } = await supabase.storage.from('attachments').upload(path, file, { upsert:true })
+    if (uploadError) { loading.style.display='none'; result.textContent='Błąd wysyłania pliku: '+uploadError.message; result.className='error'; return }
     const { data: urlData, error: urlError } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
-    if (urlError) {
-      loading.style.display = 'none'
-      result.textContent = 'Błąd generowania linku do pliku'
-      result.className = 'error'
-      return
-    }
+    if (urlError) { loading.style.display='none'; result.textContent='Błąd generowania linku do pliku'; result.className='error'; return }
     plikUrls.push(urlData.signedUrl)
   }
 
   // --- PRZYGOTOWANIE DANYCH DO BAZY ---
   const payload = { email: currentUser.email }
-  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
-  if (plikUrls.length) payload.plik = plikUrls.join(',')
+  fields.forEach(f => payload[f]=document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik=plikUrls.join(',')
 
-  const { error } = await supabase.from('tabela_elektrykow').upsert(payload, { onConflict: 'email' })
+  const { error } = await supabase.from('tabela_elektrykow').upsert(payload, { onConflict:'email' })
 
-  loading.style.display = 'none'
-
-  if (error) {
-    result.textContent = error.message
-    result.className = 'error'
-    const { data: { user } } = await supabase.auth.getUser()
-console.log('USER:', user)
-  } else {
-    // --- WYŚLIJ MAGIC EMAIL ---
+  loading.style.display='none'
+  if (error) { result.textContent=error.message; result.className='error' } 
+  else {
     await wyslijMagicEmail(currentUser.email)
-
-    // --- PRZEKIEROWANIE po sukcesie ---
-    window.location.href = 'https://orep.pl/logowanie';
+    window.location.href='https://orep.pl/logowanie'
   }
 })
 </script>
