--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <link rel="icon" href="/favicon.png">
-  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="robots" content="noindex, nofollow">
+  <link rel="icon" href="/favicon.png">
   <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -81,51 +81,59 @@
 
 <body>
 <div class="form-wrapper">
-<form id="register-form">
+  <form id="register-form">
 
-  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
-  <h2 id="form-title">Rejestracja</h2>
+    <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
 
-  <label>Imię</label>
-  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
-  <label>Nazwisko</label>
-  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+    <h2 id="form-title">Rejestracja</h2>
 
-  <label for="wojewodztwo">Województwo</label>
-  <select id="wojewodztwo" required>
-    <option value="">— wybierz województwo —</option>
-  </select>
+    <label>Imię</label>
+    <input id="imie" required oninput="this.value=this.value.toUpperCase()">
 
-  <label for="miasto">Miasto</label>
-  <select id="miasto" required disabled>
-    <option value="">— wybierz miasto —</option>
-  </select>
+    <label>Nazwisko</label>
+    <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
 
-  <label>Nr upr. EKSPLOATACJA</label>
-  <textarea id="nrE"></textarea>
-  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
-  <textarea id="nrEPomiary"></textarea>
-  <label>Nr upr. DOZÓR</label>
-  <textarea id="nrD"></textarea>
-  <label>Email</label>
-  <input id="email" readonly>
-  <label>Telefon</label>
-  <input id="telefon">
-  <label>Zajmuje się</label>
-  <textarea id="zajmujeSie"></textarea>
-  <label>Załącz skan uprawnień</label>
-  <input type="file" id="plik" multiple>
+    <label for="wojewodztwo">Województwo</label>
+    <select id="wojewodztwo" required>
+      <option value="">— wybierz województwo —</option>
+    </select>
 
-  <label class="rodo-label">
-    <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
-  </label>
+    <label for="miasto">Miasto</label>
+    <select id="miasto" required disabled>
+      <option value="">— wybierz miasto —</option>
+    </select>
 
-  <button type="submit" id="submit-btn">Zarejestruj</button>
+    <label>Nr upr. EKSPLOATACJA</label>
+    <textarea id="nrE"></textarea>
 
-  <div id="loading">Zapisywanie danych...</div>
-  <div id="result"></div>
-</form>
+    <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
+    <textarea id="nrEPomiary"></textarea>
+
+    <label>Nr upr. DOZÓR</label>
+    <textarea id="nrD"></textarea>
+
+    <label>Email</label>
+    <input id="email" readonly>
+
+    <label>Telefon</label>
+    <input id="telefon">
+
+    <label>Zajmuje się</label>
+    <textarea id="zajmujeSie"></textarea>
+
+    <label>Załącz skan uprawnień</label>
+    <input type="file" id="plik" multiple>
+
+    <label class="rodo-label">
+      <input type="checkbox" id="rodo" required>
+      Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+    </label>
+
+    <button type="submit" id="submit-btn">Zarejestruj</button>
+
+    <div id="loading">Zapisywanie danych...</div>
+    <div id="result"></div>
+  </form>
 </div>
 
 <script type="module">
@@ -137,19 +145,19 @@ const supabase = createClient(
 )
 
 let currentUser = null
-const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
+const fields = [
+  'imie','nazwisko','miasto','wojewodztwo',
+  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
+]
+
+// --- Ładowanie województw ---
 async function loadWojewodztwa(selectedWoj = null) {
-  const { data, error } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
-  if (error) return console.error('Błąd ładowania województw:', error)
+  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
+  if (error) { console.error('Błąd ładowania województw:', error); return }
   const wojSelect = document.getElementById('wojewodztwo')
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
-  data.forEach(w => {
-    const option = document.createElement('option')
-    option.value = w.id
-    option.textContent = w.nazwa
-    wojSelect.appendChild(option)
-  })
+  data.forEach(w => { const option = document.createElement('option'); option.value = w.id; option.textContent = w.nazwa; wojSelect.appendChild(option) })
   if (selectedWoj) { wojSelect.value = selectedWoj; wojSelect.dispatchEvent(new Event('change')) }
 }
 
@@ -157,16 +165,16 @@ document.getElementById('wojewodztwo').addEventListener('change', async function
   const wojId = this.value
   const miastoSelect = document.getElementById('miasto')
   if (!wojId) { miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'; miastoSelect.disabled = true; return }
-  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
-  if (error) return console.error('Błąd ładowania miast:', error)
+  const { data, error } = await supabase.from('miasta').select('id, nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
+  if (error) { console.error('Błąd ładowania miast:', error); return }
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
   data.forEach(m => { const option = document.createElement('option'); option.value = m.id; option.textContent = m.nazwa; miastoSelect.appendChild(option) })
   miastoSelect.disabled = false
 })
 
-document.getElementById('close-btn').addEventListener('click', () => window.location.href = 'https://orep.pl/')
+document.getElementById('close-btn').addEventListener('click', () => { window.location.href = 'https://orep.pl/'; })
 
-// --- Pobranie bieżącego użytkownika i wstępne wypełnienie formularza ---
+// --- Pobranie bieżącego użytkownika i wypełnienie formularza ---
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) return
@@ -180,9 +188,7 @@ document.addEventListener('DOMContentLoaded', async () => {
     fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
     if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
     if (data.miasto) document.getElementById('miasto').value = data.miasto
-  } else {
-    loadWojewodztwa()
-  }
+  } else { loadWojewodztwa() }
 })
 
 // --- FUNKCJA WYSYŁAJĄCA MAGIC EMAIL ---
@@ -201,46 +207,55 @@ async function wyslijMagicEmail(email) {
 // --- OBSŁUGA SUBMIT FORMULARZA ---
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-  loading.style.display = 'block'; result.textContent = ''; result.className = ''
+  loading.style.display = 'block'
+  result.textContent = ''
+  result.className = ''
 
+  // --- WALIDACJA ---
   if (nrE.value && nrEPomiary.value) { loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
   if (nrD.value && !nrEPomiary.value) { loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
 
   // --- WALIDACJA PLIKU ---
-  const allowedTypes = ['application/pdf','image/jpeg','image/png']
-  const maxSize = 5*1024*1024
-  for (let i=0;i<plik.files.length;i++) {
+  const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
+  const maxSize = 5 * 1024 * 1024
+  for (let i=0; i<plik.files.length; i++) {
     const file = plik.files[i]
     if (!allowedTypes.includes(file.type)) { loading.style.display='none'; result.textContent='Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'; result.className='error'; return }
-    if (file.size>maxSize) { loading.style.display='none'; result.textContent='Plik zbyt duży. Maks. 5MB'; result.className='error'; return }
+    if (file.size>maxSize) { loading.style.display='none'; result.textContent='Plik zbyt duży. Maksymalny rozmiar: 5 MB'; result.className='error'; return }
   }
 
-  // --- UPLOAD PLIKÓW z uwzględnieniem LP ---
-  let plikUrls=[]
-  let lp=null
-  const { data: userData, error: userDataError } = await supabase.from('tabela_elektrykow').select('lp').eq('email', currentUser.email).single()
-  if (userDataError) { console.error('Nie udało się pobrać LP:', userDataError) } else { lp=userData.lp }
-  if (!lp) lp=currentUser.id
+  // --- POBRANIE LP ---
+  let lp = null
+  try {
+    const { data: userData, error: userDataError } = await supabase.from('tabela_elektrykow').select('lp').eq('email', currentUser.email).single()
+    if (userDataError) throw userDataError
+    lp = userData?.lp || currentUser.id
+  } catch(err) { console.error('Nie udało się pobrać LP:', err); lp = currentUser.id }
 
-  for (let i=0;i<plik.files.length;i++) {
-    const file=plik.files[i]
-    const path=`permissions/${lp}/${Date.now()}_${file.name}`
+  // --- UPLOAD PLIKÓW ---
+  let plikUrls = []
+  for (let i=0; i<plik.files.length; i++) {
+    const file = plik.files[i]
+    const path = `permissions/${lp}/${Date.now()}_${file.name}`
+
     const { error: uploadError } = await supabase.storage.from('attachments').upload(path, file, { upsert:true })
     if (uploadError) { loading.style.display='none'; result.textContent='Błąd wysyłania pliku: '+uploadError.message; result.className='error'; return }
+
     const { data: urlData, error: urlError } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
     if (urlError) { loading.style.display='none'; result.textContent='Błąd generowania linku do pliku'; result.className='error'; return }
+
     plikUrls.push(urlData.signedUrl)
   }
 
-  // --- PRZYGOTOWANIE DANYCH DO BAZY ---
-  const payload = { email: currentUser.email }
-  fields.forEach(f => payload[f]=document.getElementById(f).value.trim())
-  if (plikUrls.length) payload.plik=plikUrls.join(',')
+  // --- ZAPIS DANYCH W BAZIE ---
+  const payload = { email: currentUser.email, lp }
+  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik = plikUrls.join(',')
 
   const { error } = await supabase.from('tabela_elektrykow').upsert(payload, { onConflict:'email' })
-
   loading.style.display='none'
-  if (error) { result.textContent=error.message; result.className='error' } 
+
+  if (error) { result.textContent = error.message; result.className='error' }
   else {
     await wyslijMagicEmail(currentUser.email)
     window.location.href='https://orep.pl/logowanie'
@@ -249,3 +264,4 @@ document.getElementById('register-form').addEventListener('submit', async e => {
 </script>
 </body>
 </html>
+
