--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -2,32 +2,95 @@
 <html lang="pl">
 <head>
   <link rel="icon" href="/favicon.png">
-  <meta name="robots" content="noindex, nofollow">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
+<meta name="robots" content="noindex, nofollow">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Rejestracja – Ogólnopolski Rejestr Elektryków</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <style>
-  body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f6f8; display: flex; justify-content: center; padding: 20px; }
-  .form-wrapper { width: 100%; max-width: 600px; }
-  form { position: relative; background-color: #fff; padding: 30px 40px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-  h2 { text-align: center; margin-bottom: 20px; }
-  label { margin-top: 15px; display: block; font-weight: 600; }
-  input, textarea, select { width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #ccc; font-size: 16px; box-sizing: border-box; background-color: #fff; color: #000; }
-  select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
-  textarea { min-height: 80px; }
-  button[type="submit"] { margin-top: 20px; width: 100%; padding: 12px; background: #4CAF50; color: #fff; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; }
-  button[type="submit"]:hover { background: #45a049; }
-  #close-btn { position: absolute; top: 12px; right: 12px; background: transparent; border: none; font-size: 26px; font-weight: bold; cursor: pointer; color: #666; line-height: 1; }
-  #close-btn:hover { color: #000; }
-  #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
-  .error { background: #f44336; color: #fff; }
-  #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
-  .rodo-label { display: flex; align-items: center; margin-top: 15px; font-weight: normal; font-size: 14px; }
-  .rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
-  </style>
+<style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f4f6f8;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.form-wrapper {
+  width: 100%;
+  max-width: 600px;
+}
+
+form {
+  position: relative;
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+h2 { text-align: center; margin-bottom: 20px; }
+
+label { margin-top: 15px; display: block; font-weight: 600; }
+
+input, textarea, select {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #000;
+}
+
+select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
+select:not(:disabled) { background-color: #fff; color: #000; }
+
+textarea { min-height: 80px; }
+
+button[type="submit"] {
+  margin-top: 20px;
+  width: 100%;
+  padding: 12px;
+  background: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+}
+button[type="submit"]:hover { background: #45a049; }
+
+#close-btn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  background: transparent;
+  border: none;
+  font-size: 26px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #666;
+  line-height: 1;
+}
+#close-btn:hover { color: #000; }
+
+#result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+.error { background: #f44336; color: #fff; }
+#loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
+
+.rodo-label {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  font-weight: normal;
+  font-size: 14px;
+}
+.rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
+</style>
 </head>
 
 <body>
@@ -96,7 +159,6 @@ const supabase = createClient(
 )
 
 let currentUser = null
-let currentLp = null
 
 const fields = [
   'imie','nazwisko','miasto','wojewodztwo',
@@ -104,8 +166,12 @@ const fields = [
 ]
 
 async function loadWojewodztwa(selectedWoj = null) {
-  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
+  const { data, error } = await supabase
+    .from('wojewodztwa')
+    .select('id, nazwa')
+    .order('nazwa')
   if (error) { console.error('Błąd ładowania województw:', error); return }
+
   const wojSelect = document.getElementById('wojewodztwo')
   wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
   data.forEach(w => {
@@ -128,7 +194,11 @@ document.getElementById('wojewodztwo').addEventListener('change', async function
     miastoSelect.disabled = true
     return
   }
-  const { data, error } = await supabase.from('miasta').select('id, nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
+  const { data, error } = await supabase
+    .from('miasta')
+    .select('id, nazwa')
+    .eq('wojewodztwo_id', wojId)
+    .order('nazwa')
   if (error) { console.error('Błąd ładowania miast:', error); return }
   miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
   data.forEach(m => {
@@ -144,15 +214,18 @@ document.getElementById('close-btn').addEventListener('click', () => {
   window.location.href = 'https://orep.pl/';
 })
 
+// --- Pobranie bieżącego użytkownika i wstępne wypełnienie formularza ---
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) return
   currentUser = user
   email.value = user.email
 
-  const { data, error } = await supabase.from('tabela_elektrykow').select('*, lp').eq('email', user.email).single()
-  if (error) { console.error('Nie udało się pobrać LP:', error); }
-  else { currentLp = data.lp }
+  const { data } = await supabase
+    .from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
 
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
@@ -165,24 +238,31 @@ document.addEventListener('DOMContentLoaded', async () => {
   }
 })
 
+// --- FUNKCJA WYSYŁAJĄCA MAGIC EMAIL ---
 async function wyslijMagicEmail(email) {
   try {
     const res = await fetch('https://orep.pl/api/magic-mail', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ email })
-    })
-    const data = await res.json()
-    if (!data.ok) { console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd') }
-  } catch(err) { console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err) }
+    });
+    const data = await res.json();
+    if (!data.ok) {
+      console.error('Błąd wysyłki magic email:', data.error || 'Nieznany błąd');
+    }
+  } catch(err) {
+    console.error('Błąd połączenia z serwerem przy wysyłce magic email:', err);
+  }
 }
 
+// --- OBSŁUGA SUBMIT FORMULARZA ---
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
   loading.style.display = 'block'
   result.textContent = ''
   result.className = ''
 
+  // --- WALIDACJA nrE / nrEPomiary / nrD ---
   if (nrE.value && nrEPomiary.value) {
     loading.style.display = 'none'
     result.textContent = 'Wybierz tylko jeden rodzaj eksploatacji'
@@ -196,8 +276,9 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     return
   }
 
+  // --- WALIDACJA PLIKU ---
   const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
-  const maxSize = 5 * 1024 * 1024
+  const maxSize = 5 * 1024 * 1024 // 5MB
   for (let i = 0; i < plik.files.length; i++) {
     const file = plik.files[i]
     if (!allowedTypes.includes(file.type)) {
@@ -214,10 +295,11 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     }
   }
 
+  // --- UPLOAD PLIKÓW ---
   let plikUrls = []
   for (let i = 0; i < plik.files.length; i++) {
     const file = plik.files[i]
-    const path = `permissions/${currentUser.id}_${currentLp}/${Date.now()}_${file.name}`
+    const path = `${currentUser.id}/${Date.now()}_${file.name}`
     const { error: uploadError } = await supabase.storage.from('attachments').upload(path, file, { upsert: true })
     if (uploadError) {
       loading.style.display = 'none'
@@ -235,6 +317,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     plikUrls.push(urlData.signedUrl)
   }
 
+  // --- PRZYGOTOWANIE DANYCH DO BAZY ---
   const payload = { email: currentUser.email }
   fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
   if (plikUrls.length) payload.plik = plikUrls.join(',')
@@ -247,10 +330,13 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     result.textContent = error.message
     result.className = 'error'
     const { data: { user } } = await supabase.auth.getUser()
-    console.log('USER:', user)
+console.log('USER:', user)
   } else {
+    // --- WYŚLIJ MAGIC EMAIL ---
     await wyslijMagicEmail(currentUser.email)
-    window.location.href = 'https://orep.pl/logowanie'
+
+    // --- PRZEKIEROWANIE po sukcesie ---
+    window.location.href = 'https://orep.pl/logowanie';
   }
 })
 </script>
