--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -299,7 +299,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   let plikUrls = []
   for (let i = 0; i < plik.files.length; i++) {
     const file = plik.files[i]
-    const path = `${currentUser.id}/${Date.now()}_${file.name}`
+    const path = `${currentUser.email}/${Date.now()}_${file.name}`
     const { error: uploadError } = await supabase.storage.from('attachments').upload(path, file, { upsert: true })
     if (uploadError) {
       loading.style.display = 'none'
